--- a/API_HarryPotter/angular.json
+++ b/API_HarryPotter/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "API_Holiday": {
+    "API_HarryPotter": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/api-holiday",
+            "outputPath": "dist/api-harry-potter",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "API_Holiday:build:production"
+              "browserTarget": "API_HarryPotter:build:production"
             },
             "development": {
-              "browserTarget": "API_Holiday:build:development"
+              "browserTarget": "API_HarryPotter:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "API_Holiday:build"
+            "browserTarget": "API_HarryPotter:build"
           }
         },
         "test": {
